Bug 565411 - Test failures in jdt.ui running build with Java 11+
Change-Id: Iccf28fb42b55670a3c3b67a1ef8d7cf98d2c9fae
Signed-off-by: Mickael Istria <mistria@redhat.com>